blurred image fixed

--- a/client/styles/GenBarcode.module.css
+++ b/client/styles/GenBarcode.module.css
@@ -59,20 +59,6 @@
     cursor: pointer;
 }
 
-.printButton {
-    border: 3px solid #0d6efd;
-    background: white;
-    border-radius: 4rem;
-    font-family: sans-serif;
-    padding: 8px 16px;
-    margin: 20px 0px;
-    cursor: pointer;
-}
-
-.printButton:hover {
-    background-color: #0d6efd;
-}
-
 .barCode > * {
     text-align: center;
     font-weight: 400;
